Jenkins-migration/httproute-jenkins.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-jenkins
  namespace: jenkins
spec:
  hostnames:
  - jenkins.harness-lab.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-jenkins
    namespace: istio-ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jenkins
      port: 8080
      weight: 1
